[tool.poetry]
name = "my-bot"
version = "0.1.0"
description = ""
authors = ["Olga Khaidoukova <khaidoukova@inbox.ru>"]
readme = "README.md"
packages = [{include = "my_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pytelegrambotapi = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
